<resources>
    <string name="app_name">Formula1</string>
    <string name="hint_search">Search season year</string>

    <string name="title_attention">Attention</string>
    <string name="body_download_driver_standing">Downloading driver standings.</string>
    <string name="body_download_driver_detail">Download driver detail.</string>
    <string name="body_error_download_driver_standing">Failure download driver standings.</string>
    <string name="body_error_download_driver_detail">Failure download driver detail.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_driver"> </string>

    <string name="txt_label_profile">Profile year:</string>
    <string name="txt_label_round">Round:</string>
    <string name="txt_label_country">Nationality</string>
    <string name="txt_label_date_birth">Date of birth</string>
    <string name="txt_label_country_birth">Nationality and date of birth</string>
    <string name="txt_label_constructor_information">Constructor information</string>
    <string name="txt_label_constructor_name">Team name:</string>
    <string name="txt_label_constructor_country">Nationality:</string>
    <string name="txt_label_grid_identification">Grid identification</string>
    <string name="txt_label_circuit_information">About circuit</string>
    <string name="txt_label_race_name">Race name</string>
    <string name="txt_label_circuit_name">Circuit name</string>
    <string name="txt_label_circuit_location">Location</string>
    <string name="txt_label_season_statistics">Season Statistics</string>
    <string name="txt_label_code">Code</string>
    <string name="txt_label_number">Number</string>
    <string name="txt_label_position">Position</string>
    <string name="txt_label_wins">Wins</string>
    <string name="txt_label_points">Points</string>

    <string name="line_graph_title">Progress (Grid and Race)</string>
    <string name="line_graph_series_grid">Grid Position</string>
    <string name="line_graph_series_race">Race Result</string>

    <string name="column_1_graph_label">Round</string>
    <string name="column_2_graph_label">Grand Prix</string>
    <string name="column_3_graph_label">Grid</string>
    <string name="column_4_graph_label">Race</string>
    <string name="column_5_graph_label">Status</string>

    <string name="title_viewpage_list">Standings</string>
    <string name="title_viewpage_favorite">Favorits</string>

    <string name="nationality_american">American</string>
    <string name="nationality_australian">Australian</string>
    <string name="nationality_austrian">Austrian</string>
    <string name="nationality_belgian">Belgian</string>
    <string name="nationality_brazilian">Brazilian</string>
    <string name="nationality_british">British</string>
    <string name="nationality_danish">Danish</string>
    <string name="nationality_dutch">Dutch</string>
    <string name="nationality_finnish">Finnish</string>
    <string name="nationality_french">French</string>
    <string name="nationality_german">German</string>
    <string name="nationality_japanese">Japanese</string>
    <string name="nationality_indian">Indian</string>
    <string name="nationality_indonesian">Indonesian</string>
    <string name="nationality_italian">Italian</string>
    <string name="nationality_mexican">Mexican</string>
    <string name="nationality_polish">Polish</string>
    <string name="nationality_russian">Russian</string>
    <string name="nationality_spanish">Spanish</string>
    <string name="nationality_swedish">Swedish</string>
    <string name="nationality_swiss">Swiss</string>
    <string name="nationality_venezuelan">Venezuelan</string>
    <string name="title_activity_maps">Map</string>


</resources>
